# e-bot

./: .gitignore  CMakeLists.txt  README.md
TeamSpeak3-C-Query-API_headers/Ts3Api/: Channel.hpp  Client.hpp  Group.hpp  Permission.hpp  Server.hpp
TeamSpeak3-C-Query-API_headers/Ts3Api/structs/: serverStructs.hpp  ts3ObjectProperties.hpp
src/: ConfigFile.cpp  Module_thread.cpp  Modules_manager.cpp  example_library.cpp  main.cpp
src/includes/: ConfigFile.hpp  Module_interface.hpp  Module_thread.hpp  Modules_manager.hpp  colors.h
